docs/0.17/_sources/api/gammapy.modeling.models.ScaleSpectralModel.rst.txt
ScaleSpectralModel
==================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ScaleSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ScaleSpectralModel.covariance
      ~ScaleSpectralModel.default_parameters
      ~ScaleSpectralModel.norm
      ~ScaleSpectralModel.parameters
      ~ScaleSpectralModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~ScaleSpectralModel.__call__
      ~ScaleSpectralModel.copy
      ~ScaleSpectralModel.create
      ~ScaleSpectralModel.energy_flux
      ~ScaleSpectralModel.evaluate
      ~ScaleSpectralModel.evaluate_error
      ~ScaleSpectralModel.from_dict
      ~ScaleSpectralModel.from_parameters
      ~ScaleSpectralModel.integral
      ~ScaleSpectralModel.inverse
      ~ScaleSpectralModel.plot
      ~ScaleSpectralModel.plot_error
      ~ScaleSpectralModel.spectral_index
      ~ScaleSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: norm
   .. autoattribute:: parameters
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
